# response-adapter

./: .env.example  .gitignore  README.md  README.zh-CN.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-05-31-toresponses.md
src/converters/: anthropic_response_to_responses.py  chat_response_to_responses.py  responses_to_anthropic_request.py  responses_to_chat_request.py
src/models/: anthropic.py  chat.py  responses.py
src/proxy/: client.py  server.py
tests/: test_integration.py
